# rosa

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md
doc/: book.toml
doc/src/: README.md  SUMMARY.md  extensions.md  extensions_detection.md  extensions_fuzzers.md  installation.md  internals.md  quickstart.md
examples/configs/: sudo-backdoored.toml
fuzzers/aflpp/: aflpp-rosa.patch  qemuafl-rosa.patch
src/: clustering.rs  config.rs  criterion.rs  decision.rs  distance_metric.rs  error.rs  fuzzer.rs  lib.rs  oracle.rs  trace.rs
src/cli/: logging.rs  rosa.rs  rosa_evaluate.rs  rosa_explain.rs  rosa_showmap.rs  rosa_trace_dist.rs  tui.rs
