[package]
name = "rosa"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.27.0"
ctrlc = "3.4.2"
itertools = "0.12.1"
libc = "0.2.153"
rand = "0.8.5"
ratatui = "0.26.1"
rayon = "1.9.0"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"


[[bin]]
name = "rosa"
path = "src/cli/rosa.rs"

[[bin]]
name = "rosa-evaluate"
path = "src/cli/rosa_evaluate.rs"

[[bin]]
name = "rosa-explain"
path = "src/cli/rosa_explain.rs"

[[bin]]
name = "rosa-trace-dist"
path = "src/cli/rosa_trace_dist.rs"

[[bin]]
name = "rosa-showmap"
path = "src/cli/rosa_showmap.rs"
